Changed grid width. Fixed Header getting covered by component.

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,12 +3,14 @@
     position: sticky;
     top: 0;
     width: 100%;
+    height: 10%;
     background-color: #3f51b5;
     color: #fff;
     display: flex;
     align-items: center;
-    height: 56px;
     font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif;
+    /* Need to keep header on top */
+    z-index: 1;
   }
 
   .navlinks{
@@ -18,7 +20,7 @@
   .navdiv{
     float: right;
   }
-  a:visited { 
-    text-decoration: none; 
-    color: white; 
+  a:visited {
+    text-decoration: none;
+    color: white;
    }
